[24828] Add JVM parameter add-opens to elexis-server.sh